# semantic-code-search

./: .gitignore  README.md  USAGE.md  example.json  example.sh  pyproject.toml  requirements.txt  setup.py
.cursor/plans/: faiss-integration-with-multi-project-support-52ea5283.plan.md
Examples/: example.json
src/semantic_code_search/: cli.py  cluster.py  embed.py  faiss_storage.py  prompt.py  query.py  tree_parser.py
