[build-system]
requires = [
    "setuptools>=65.0.0",
    "wheel>=0.38.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-code-search"
version = "0.4.0"
description = "Search your codebase with natural language"
authors = [
    {name = "Original Author", email = "kiril@codeball.ai"},
]
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
license = {text = "AGPL-3.0-only"}
keywords = ["semantic code search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = [
    "numpy>=1.24.0",
    "prompt_toolkit>=3.0.39",
    "Pygments>=2.15.0",
    "sentence_transformers>=2.2.2",
    "torch>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
]

[project.scripts]
sem = "semantic_code_search.cli:main"

[tool.setuptools]
packages = {find = {where = ["src"]}}
